--- a/pro_epacs_edecottena_backend/nbproject/project.properties
+++ b/pro_epacs_edecottena_backend/nbproject/project.properties
@@ -26,6 +26,7 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
+file.reference.gson-2.2.2.jar=lib\\gson-2.2.2.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -41,7 +42,8 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${libs.hibernate4-support.classpath}
+    ${libs.hibernate4-support.classpath}:\
+    ${file.reference.gson-2.2.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
